<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_alarms">

    <fragment
        android:id="@+id/navigation_alarms"
        android:name="com.snapkirin.homesecurity.ui.main.alarms.AlarmsFragment"
        android:label="@string/alarm"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/navigation_devices"
        android:name="com.snapkirin.homesecurity.ui.main.devices.DevicesFragment"
        android:label="@string/device"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/navigation_options"
        android:name="com.snapkirin.homesecurity.ui.main.options.OptionsFragment"
        android:label="@string/options"
        tools:layout="@xml/preference_options" />
</navigation>