<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.devicedetail.fragments.DeviceOptionsFragment" >

    <LinearLayout
        android:id="@+id/deviceDetailStreamingOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:foregroundGravity="center"
        android:foregroundTintMode="add"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wifiSignalImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            tools:enabled="false"
            android:importantForAccessibility="no"
            app:drawableStartCompat="@drawable/ic_baseline_cast_24"
            app:drawableTint="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wifiSsidText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_streaming"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:enabled="false"/>

            <TextView
                android:id="@+id/wifiCapabilityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_streaming_summary"
                tools:enabled="false"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deviceDetailUnbindOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/unbindOptionImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:importantForAccessibility="no"
            app:drawableStartCompat="@drawable/ic_baseline_remove_circle_outline_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/unbindOptionKeyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unbind_device"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/unbindOptionSummaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unbind_device_summary" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>