<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_bg"
    android:minWidth="350dp"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alarmDetailTypeText"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                tools:drawableStartCompat="@drawable/ic_baseline_directions_walk_24"
                tools:text="@string/motion_alarm" />

            <TextView
                android:id="@+id/alarmDetailDeviceTitleText"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/device"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_dns_24" />

            <TextView
                android:id="@+id/alarmDetailDeviceNameText"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                tools:text="设备名 Device Name 123456" />

        </LinearLayout>

        <ImageView
            android:id="@+id/alarmDetailImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:contentDescription="TODO"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>

    <TextView
        android:id="@+id/alarmDetailTimeTitleText"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/time"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_access_time_24" />

    <TextView
        android:id="@+id/alarmDetailTimeText"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        tools:text="2021/04/12 19:21" />

    <TextView
        android:id="@+id/alarmDetailDescriptionTitleText"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/description"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_description_24" />

    <TextView
        android:id="@+id/alarmDetailDescriptionText"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        tools:text="描述 描述 Description Description Description Description" />

</LinearLayout>
